--- a/MerlionPortal/MerlionPortal-war/web/oes/displayrequestinfor.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/displayrequestinfor.xhtml
@@ -94,9 +94,11 @@
                 <br></br>
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                 <p:commandButton action="viewallrequests.xhtml" value="Go Back">
-                </p:commandButton>   
-                <p:commandButton action="#{quotationManagedBean.deletRequest}" value="Cancel This Request">
-                </p:commandButton>        
+                </p:commandButton> 
+                <c:if test="#{quotationManagedBean.canGenerateRequest()}">
+                    <p:commandButton action="#{quotationManagedBean.deletRequest}" value="Cancel This Request">
+                    </p:commandButton>   
+                </c:if>
             </h:form>
 
         </ui:define>
