--- a/MerlionPortal/MerlionPortal-war/web/services.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/services.xhtml
@@ -45,9 +45,9 @@
                             <img src="img/2pl.jpg" class="service-image" />
                             <div class="caption product-box">
                                 <h2 class="service-title">Package 2</h2>
-                                <h3>1PL Non-Manufacturing</h3>
+                                <h3><font size="+1">1PL Non-Manufacturing</font></h3>
                                 <div class="product-description">
-                                    This package is designed to suit the needs of First Party Logistics Service Providers (1PLs) in general.<br /><br /><br />
+                                    This package is designed to suit the needs of First Party Logistics Service Providers (1PLs) in general.<br /><br />
                                     By subscribing to this package, your will gain access to the following systems:<br /><br />
                                     <span class="badge alert-orange"><font size="+1" class="min-horizontal-width"> OES</font></span>
                                     <span class="badge alert-purple"><font size="+1" class="min-horizontal-width">CRMS</font></span>
