--- a/MerlionPortal/MerlionPortal-war/web/servicedescription.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/servicedescription.xhtml
@@ -152,7 +152,7 @@
                     </div>
                 </div>
             </div>
-            <h:form>
+<!--            <h:form>
                 <div id="buyModal" class="modal fade">
                     <div class="modal-dialog">
 
@@ -217,7 +217,7 @@
 
                 </div>
 
-            </h:form>
+            </h:form>-->
             <script type="text/javascript">
                 function toggleModal() {
                     $("#buyModal").modal('show');
