--- a/MerlionPortal/MerlionPortal-war/web/services.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/services.xhtml
@@ -45,7 +45,7 @@
                             <img src="img/2pl.jpg" class="service-image" />
                             <div class="caption product-box">
                                 <h2 class="service-title">Package 2</h2>
-                                <h3><font size="+1">1PL Non-Manufacturing</font></h3>
+                                <h3>1PL Non-Manufacturing</font</h3>
                                 <div class="product-description">
                                     This package is designed to suit the needs of First Party Logistics Service Providers (1PLs) in general.<br /><br />
                                     By subscribing to this package, your will gain access to the following systems:<br /><br />
