--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalllocation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalllocation.xhtml
@@ -3,30 +3,42 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <h:head>
-        <title>View My Locations</title>
-    </h:head>
-    <h:body>
-        <h1> View My Warehouses</h1>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+    <c:set var="import" value="templateuser.xhtml"/>
+    <c:if test="#{dashboardBean.canUseCI() || dashboardBean.loginedUser.userType == 'superuser'}">
+        <c:set var="import" value="templateadmin.xhtml"/>
+    </c:if>
+    <ui:composition template="${root}/templates/${import}">
+        <ui:param name="pageName" value="WMS home" />
+
+        <ui:define name="more-imports">
+            <ui:insert>
+                <!--                import CSS style or Javascript here, if any-->
+            </ui:insert>
+        </ui:define>
+        
+
+        <ui:define name="left">
+
+                    <p:menu>
+                        <p:submenu label =" Manage Your Transportation">
+                            <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
+                            <p:submenu label="Location" >
+                                <p:menuitem value="Add A Location" url="addnewlocation.xhtml" />
+                                <p:menuitem value="View All Locations" url="viewalllocation.xhtml" />
+                            </p:submenu>
+                            <p:submenu label="Transportation Asset" >
+                                <p:menuitem value="Add Transportation Assets" url="addnewtasset.xhtml" />
+                                <p:menuitem value="View Transportation Assets" url="viewalltasset.xhtml" />
+                            </p:submenu>
+ 
+                        </p:submenu>
+                    </p:menu>
+        </ui:define>
+         <ui:define name="right">       
             <h:form id="formMain">
-            <p:growl id="msgs" showDetail="true"/>  
-              <p:menubar>
-                <p:menuitem value="TMS Home" url="tmsindex.xhtml"/>
-
-                <p:submenu label="Location" >
-                    <p:menuitem value="Add New Location" url="addnewlocation.xhtml" />
-                    <p:menuitem value="View All locations" url="viewalllocation.xhtml" />
-                </p:submenu>
-                <p:submenu label="Transportation Asset" >
-                    <p:menuitem value="Add Transportation Asset" url="addnewtasset.xhtml" />
-                    <p:menuitem value="View Transportation Assets" url="viewalltasset.xhtml" />
-                </p:submenu>
-
-            </p:menubar>
-            <br/>
-        </h:form>
-        <h:form>
             <p:dataTable id="location" var="location" sortMode="multiple" editable="true" value="#{tLocationViewEditManagedBean.locations}" 
                          widgetVar="locationsTable"
                          emptyMessage="No location found"
@@ -78,7 +90,9 @@
             </p:dataTable>
             <br></br>
             <p:messages id="msgs" showDetail="true" autoUpdate="true" closable="true" />
-        </h:form>
-    </h:body>
-</html>
+            </h:form>
+        </ui:define>
+    </ui:composition>
+</html>                        
+
 
