TMS integration: change menu to panel menu

--- a/MerlionPortal/MerlionPortal-war/web/tms/tmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/tmsindex.xhtml
@@ -22,7 +22,7 @@
 
         <ui:define name="left">
 
-                    <p:menu>
+                    <p:panelMenu>
                         <p:submenu label =" Manage Your Transportation">
                             <p:menuitem value="TMS Home" url="tmsindex.xhtml" />
                             <p:submenu label="Location" >
@@ -35,7 +35,7 @@
                             </p:submenu>
  
                         </p:submenu>
-                    </p:menu>
+                    </p:panelMenu>
         </ui:define>
 
         <ui:define name="right">
