--- a/MerlionPortal/MerlionPortal-war/web/oes/pogeneration.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/pogeneration.xhtml
@@ -43,7 +43,9 @@
                         <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" />   
                         <p:menuitem value="Order Status" url="displayallso.xhtml" />
                     </p:submenu>
-
+                    <p:submenu label="Make Pyament" styleClass="display:block">
+                        <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />
+                    </p:submenu>
                     <p:submenu label="Reports" styleClass="display:block">
                         <p:menuitem value="Sales Reports" url="#" />
                     </p:submenu>
